// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Array [
  <form
    action=""
  >
    <label
      htmlFor="Deepest note"
    >
      Deepest note : 
      <input
        onChange={[Function]}
        type="text"
        value="F1"
      />
    </label>
    <label
      htmlFor="Selected Chord"
    >
      Selected Chord : 
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </form>,
  <main>
    <ol>
      <li>
        <ol>
          <li
            className=""
          >
            <aside>
              0
            </aside>
            <article>
              E4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              1
            </aside>
            <article>
              F4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              2
            </aside>
            <article>
              Gb4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              3
            </aside>
            <article>
              G4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              4
            </aside>
            <article>
              Ab4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              5
            </aside>
            <article>
              A4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              6
            </aside>
            <article>
              A#4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              7
            </aside>
            <article>
              B4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              8
            </aside>
            <article>
              C5
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              9
            </aside>
            <article>
              Db5
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              10
            </aside>
            <article>
              D5
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              11
            </aside>
            <article>
              Eb5
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              12
            </aside>
            <article>
              E5
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            <aside>
              13
            </aside>
            <article>
              A3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              14
            </aside>
            <article>
              A#3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              15
            </aside>
            <article>
              B3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              16
            </aside>
            <article>
              C4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              17
            </aside>
            <article>
              Db4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              18
            </aside>
            <article>
              D4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              19
            </aside>
            <article>
              D#4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              20
            </aside>
            <article>
              E4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              21
            </aside>
            <article>
              F4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              22
            </aside>
            <article>
              Gb4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              23
            </aside>
            <article>
              G4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              24
            </aside>
            <article>
              Ab4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              25
            </aside>
            <article>
              A4
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            <aside>
              26
            </aside>
            <article>
              D3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              27
            </aside>
            <article>
              D#3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              28
            </aside>
            <article>
              E3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              29
            </aside>
            <article>
              F3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              30
            </aside>
            <article>
              Gb3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              31
            </aside>
            <article>
              G3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              32
            </aside>
            <article>
              G#3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              33
            </aside>
            <article>
              A3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              34
            </aside>
            <article>
              A#3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              35
            </aside>
            <article>
              B3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              36
            </aside>
            <article>
              C4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              37
            </aside>
            <article>
              Db4
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              38
            </aside>
            <article>
              D4
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            <aside>
              39
            </aside>
            <article>
              G2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              40
            </aside>
            <article>
              G#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              41
            </aside>
            <article>
              A2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              42
            </aside>
            <article>
              A#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              43
            </aside>
            <article>
              B2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              44
            </aside>
            <article>
              C3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              45
            </aside>
            <article>
              C#3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              46
            </aside>
            <article>
              D3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              47
            </aside>
            <article>
              D#3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              48
            </aside>
            <article>
              E3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              49
            </aside>
            <article>
              F3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              50
            </aside>
            <article>
              Gb3
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              51
            </aside>
            <article>
              G3
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            <aside>
              52
            </aside>
            <article>
              C2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              53
            </aside>
            <article>
              C#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              54
            </aside>
            <article>
              D2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              55
            </aside>
            <article>
              D#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              56
            </aside>
            <article>
              E2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              57
            </aside>
            <article>
              F2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              58
            </aside>
            <article>
              F#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              59
            </aside>
            <article>
              G2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              60
            </aside>
            <article>
              G#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              61
            </aside>
            <article>
              A2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              62
            </aside>
            <article>
              A#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              63
            </aside>
            <article>
              B2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              64
            </aside>
            <article>
              C3
            </article>
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            <aside>
              65
            </aside>
            <article>
              F1
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              66
            </aside>
            <article>
              F#1
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              67
            </aside>
            <article>
              G1
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              68
            </aside>
            <article>
              G#1
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              69
            </aside>
            <article>
              A1
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              70
            </aside>
            <article>
              A#1
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              71
            </aside>
            <article>
              B1
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              72
            </aside>
            <article>
              C2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              73
            </aside>
            <article>
              C#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              74
            </aside>
            <article>
              D2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              75
            </aside>
            <article>
              D#2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              76
            </aside>
            <article>
              E2
            </article>
            <div />
          </li>
          <li
            className=""
          >
            <aside>
              77
            </aside>
            <article>
              F2
            </article>
            <div />
          </li>
        </ol>
      </li>
    </ol>
  </main>,
]
`;

exports[`renders correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,12 +7,15 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : "
`;

exports[`renders correctly 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,22 +7,28 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid chord
+       </span>
      </label>
    </form>,
    <main>
      <ol>
        <li>"
`;

exports[`renders correctly 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,21 +7,24 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"G3\\"
        />
      </label>
    </form>,
    <main>
      <ol>
@@ -195,19 +198,21 @@
                A#3
              </article>
              <div />
            </li>
            <li
-             className=\\"\\"
+             className=\\"_3M\\"
            >
              <aside>
                15
              </aside>
              <article>
                B3
              </article>
-             <div />
+             <div>
+               3M
+             </div>
            </li>
            <li
              className=\\"\\"
            >
              <aside>
@@ -228,19 +233,21 @@
                Db4
              </article>
              <div />
            </li>
            <li
-             className=\\"\\"
+             className=\\"_5P\\"
            >
              <aside>
                18
              </aside>
              <article>
                D4
              </article>
-             <div />
+             <div>
+               5P
+             </div>
            </li>
            <li
              className=\\"\\"
            >
              <aside>
@@ -375,19 +382,21 @@
                Gb3
              </article>
              <div />
            </li>
            <li
-             className=\\"\\"
+             className=\\"_1P\\"
            >
              <aside>
                31
              </aside>
              <article>
                G3
              </article>
-             <div />
+             <div>
+               1P
+             </div>
            </li>
            <li
              className=\\"\\"
            >
              <aside>
@@ -419,19 +428,21 @@
                A#3
              </article>
              <div />
            </li>
            <li
-             className=\\"\\"
+             className=\\"_3M\\"
            >
              <aside>
                35
              </aside>
              <article>
                B3
              </article>
-             <div />
+             <div>
+               3M
+             </div>
            </li>
            <li
              className=\\"\\"
            >
              <aside>
@@ -452,19 +463,21 @@
                Db4
              </article>
              <div />
            </li>
            <li
-             className=\\"\\"
+             className=\\"_5P\\"
            >
              <aside>
                38
              </aside>
              <article>
                D4
              </article>
-             <div />
+             <div>
+               5P
+             </div>
            </li>
          </ol>
        </li>
        <li>
          <ol>
@@ -599,19 +612,21 @@
                Gb3
              </article>
              <div />
            </li>
            <li
-             className=\\"\\"
+             className=\\"_1P\\"
            >
              <aside>
                51
              </aside>
              <article>
                G3
              </article>
-             <div />
+             <div>
+               1P
+             </div>
            </li>
          </ol>
        </li>
        <li>
          <ol>"
`;
